tests/toy/neg/000993_mutation.toylang
program a = { if a then sleep bool sleep; } .
